--- a/src/componentes/experience/experience.css
+++ b/src/componentes/experience/experience.css
@@ -4,6 +4,10 @@
     gap:2rem;
 }
 
+.first__heading__experience{
+    margin-top: 8rem;
+}
+
 .experience__container > div {
     background: var(--color-bg-variant);
     padding: 2.4rem 5rem;
