--- a/src/componentes/header/header.css
+++ b/src/componentes/header/header.css
@@ -8,7 +8,26 @@ header {
     text-align: center;
     height: 100%;
     position: relative;
+
 }
+
+.sub__container{
+    display: grid;
+    grid-template-columns: 35% 35%;
+    gap:15%;
+
+}
+
+.details__container{
+    width: 100%;
+    aspect-ratio: 1/1;
+    display: grid;
+    place-items: center;
+    margin-left: 30%;
+    margin-top: 20%;
+}
+
+
 
 /* ======== CTA ======== */
 
@@ -29,6 +48,8 @@ header {
     position: absolute;
     left: 0;
     bottom: 3rem;
+    font-size: 1.5rem;
+
 
 }
 
@@ -40,25 +61,31 @@ header {
 }
 
 /* ==== img ===== */
+.me__container{
+    width: 100%;
+    aspect-ratio: 1/1;
+    display: grid;
+    place-items: center;
+}
+
 .me{
-    background: linear-gradient(var(--color-primary),transparent);
+    background: linear-gradient(var(--color-light),transparent);
     width: 22rem;
-    height: 30rem;
-    position: absolute;
-    left: calc(50% - 11rem);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
+    height: 28rem;
+    margin-top: 7rem;
+    border-radius: 5rem 5rem 0 0;
     overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    padding-top: 2rem;
+
 }
 
 .scroll__down {
     position: absolute;
     right: -2.3rem;
     bottom: 5rem;
-    transform: rotate(90deg);
     font-weight: 300;
-    font-size: 0.9rem;
+    font-size: 2.5rem;
+
 }
 
 @media screen and (max-width: 1024px){
